# cs2kz-api

./: .clippy.toml  .editorconfig  .env  .env.docker  .env.docker.example  .env.example  .envrc  .example.docker.env  .example.env  .gitignore  .rustfmt.toml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  KZ-DEVELOPERS.md  Makefile  Makefile.toml  README.md  TODO.md  api-spec.json  bench.md  compose.yaml  compose.yml  cs2kz-api.example.toml  docker-compose.yml  docker-entrypoint.sh  flake.nix  justfile  rust-toolchain.toml  shell.nix
.cargo/: config.toml
crates/cs2kz/: Cargo.toml
crates/cs2kz-api/: Cargo.toml
crates/cs2kz-api/migrations/: 0001_initial.down.sql  0001_initial.up.sql
crates/cs2kz-api/src/: auth.rs  bans.rs  cli.rs  jumpstats.rs  lib.rs  macros.rs  main.rs  metrics.rs  problem_details.rs  records.rs  replays.rs  runtime.rs  serde.rs  taskdump.rs  users.rs
crates/cs2kz-api/src/config/: access_keys.rs  cookies.rs  depot_downloader.rs  mod.rs  runtime.rs  server.rs  steam_auth.rs  tracing.rs
crates/cs2kz-api/src/extract/: mod.rs
crates/cs2kz-api/src/extract/header/: mod.rs  rejection.rs
crates/cs2kz-api/src/extract/json/: mod.rs  rejection.rs
crates/cs2kz-api/src/extract/path/: mod.rs  rejection.rs
crates/cs2kz-api/src/extract/query/: mod.rs  rejection.rs
crates/cs2kz-api/src/maps/: course_identifier.rs  map_identifier.rs  mod.rs
crates/cs2kz-api/src/middleware/: catch_panic.rs  cors.rs  mod.rs  request_id.rs  trace.rs  trim_trailing_slash.rs
crates/cs2kz-api/src/middleware/auth/: access_key.rs  localhost.rs  mod.rs
crates/cs2kz-api/src/openapi/: mod.rs  shims.rs
crates/cs2kz-api/src/players/: mod.rs  player_identifier.rs
crates/cs2kz-api/src/plugin/: mod.rs  version_identifier.rs
crates/cs2kz-api/src/response/: error.rs  mod.rs
crates/cs2kz-api/src/runtime/: environment.rs  mod.rs  panic_hook.rs  signal.rs
crates/cs2kz-api/src/servers/: mod.rs  server_identifier.rs
crates/cs2kz-api/src/steam/: maps.rs  mod.rs  users.rs
crates/cs2kz-api/src/ws/: message.rs  mod.rs
crates/cs2kz/migrations/: .gitignore  0001_initial.down.sql  0001_initial.up.sql  0002_add_player_prime_status.sql  0003_add_replay_cleaner_data.down.sql  0003_add_replay_cleaner_data.up.sql  0004_add_world_records.down.sql  0004_add_world_records.up.sql  0005_add_replay_available_flag.sql
crates/cs2kz/src/: announcements.rs  checksum.rs  context.rs  course_identifier.rs  email.rs  error.rs  events.rs  global_status.rs  identifier.rs  jump_type.rs  jumpstat.rs  jumptype.rs  lib.rs  macros.rs  map_identifier.rs  mode.rs  num.rs  pagination.rs  player_identifier.rs  plugin.rs  points.rs  python.rs  ranked_status.rs  records.rs  replays.rs  server_identifier.rs  steam.rs  steam_id.rs  steam_id2.rs  string.rs  style.rs  styles.rs  tier.rs  utoipa.rs
crates/cs2kz/src/access_keys/: access_key.rs  mod.rs
crates/cs2kz/src/bans/: banned_by.rs  mod.rs  reason.rs
crates/cs2kz/src/config/: database.rs  mod.rs  points.rs  replays.rs
crates/cs2kz/src/database/: error.rs  macros.rs  mod.rs
crates/cs2kz/src/fmt/: display_as_debug.rs  io_compat.rs  mod.rs
crates/cs2kz/src/git/: mod.rs  revision.rs
crates/cs2kz/src/jumpstats/: jump_type.rs  mod.rs
crates/cs2kz/src/maps/: checksum.rs  mod.rs  state.rs  stream.rs
crates/cs2kz/src/players/: mod.rs  player_id.rs
crates/cs2kz/src/points/: calculator.rs  daemon.rs  distribution.rs  mod.rs  worker.rs
crates/cs2kz/src/replays/: cleaner.rs
crates/cs2kz/src/servers/: mod.rs  server_host.rs
crates/cs2kz/src/steam/: mod.rs  servers.rs
crates/cs2kz/src/time/: duration_ext.rs  mod.rs  seconds.rs  timestamp.rs
crates/cs2kz/src/users/: mod.rs  permissions.rs  user_id.rs
crates/macros/: Cargo.toml
crates/macros/src/: integration_test.rs  lib.rs
crates/nig/: Cargo.toml
crates/nig/src/: bessel.rs  differential_evo.rs  distribution.rs  fitting.rs  lib.rs  nelder_mead.rs  nig.rs  params.rs  quad.rs
crates/points/: Cargo.toml  README.md
crates/points/src/: dist.rs  lib.rs  main.rs  record.rs
crates/spec-generator/: Cargo.toml  README.md
crates/spec-generator/src/: main.rs
crates/steam-openid/: Cargo.toml
crates/steam-openid/src/: callback_payload.rs  lib.rs  login_url.rs
cs2kz/: Cargo.toml
cs2kz-api/: .gitignore  Cargo.toml  Dockerfile
cs2kz-api/src/: args.rs  audit_logs.rs  config.rs  error.rs  extractors.rs  headers.rs  jwt.rs  lib.rs  logging.rs  main.rs  openapi.rs  permissions.rs  responses.rs  serde.rs  sql.rs  state.rs  steam.rs  util.rs
cs2kz-api/src/config/: error.rs  mod.rs
cs2kz-api/src/database/: mod.rs
cs2kz-api/src/middleware/: auth.rs  helpers.rs  logging.rs  mod.rs  server_auth.rs
cs2kz-api/src/middleware/auth/: admins_only.rs  gameserver.rs  gameservers.rs  jwt.rs  map_approval.rs  mod.rs  web.rs  website.rs
cs2kz-api/src/middleware/logging/: mod.rs
cs2kz-api/src/models/: bans.rs  jumpstats.rs  maps.rs  mod.rs  players.rs  records.rs  servers.rs
cs2kz-api/src/res/: bans.rs  maps.rs  mod.rs  player.rs  records.rs  responses.rs  servers.rs
cs2kz-api/src/routes/: auth.rs  bans.rs  health.rs  jumpstats.rs  maps.rs  mod.rs  players.rs  records.rs  servers.rs
cs2kz-api/src/routes/auth/: mod.rs  steam.rs
cs2kz-api/src/routes/players/: get.rs  post.rs  put.rs
cs2kz-api/src/routes/servers/: mod.rs
cs2kz-api/src/state/: error.rs  mod.rs
cs2kz-api/src/tests/: gameserver_auth.rs  maps.rs  mod.rs  players.rs  servers.rs  status.rs
cs2kz/src/: error.rs  id_or_name.rs  jumpstat.rs  lib.rs  map_identifier.rs  mode.rs  player_identifier.rs  runtype.rs  serde.rs  server_identifier.rs  sqlx.rs  steam_id.rs  style.rs  tier.rs
lib/cs2kz/: Cargo.toml  README.md
lib/cs2kz/src/: global_status.rs  jump_type.rs  lib.rs  ranked_status.rs  tier.rs
lib/cs2kz/src/mode/: mod.rs  serde.rs  sqlx.rs  tests.rs  utoipa.rs
lib/cs2kz/src/steam_id/: mod.rs  serde.rs  sqlx.rs  tests.rs  utoipa.rs
lib/cs2kz/src/styles/: iter.rs  mod.rs  serde.rs  sqlx.rs  utoipa.rs
macros/: Cargo.toml
macros/src/: lib.rs
spec-generator/: Cargo.toml
spec-generator/src/: main.rs
(+1035 files in other folders)
