[package]
name = "cs2kz-api"
version = "0.0.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
readme = "./README.md"
homepage = "https://cs2kz.org"
repository = "https://github.com/KZGlobalTeam/cs2kz-api"
license-file = "./LICENSE"

[features]
production = []
console = ["dep:console-subscriber", "tokio/tracing"]

[lints]
workspace = true

[dependencies.cs2kz]
path = "./crates/cs2kz"
features = ["serde", "sqlx", "utoipa"]

[dependencies.cs2kz-api-macros]
path = "./crates/macros"

[dependencies.anyhow]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.dotenvy]
version = "0.15"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "signal", "process"]

[dependencies.axum]
version = "0.7"
default-features = false
features = ["http1", "http2", "json", "macros", "tokio", "query"]

[dependencies.axum-extra]
version = "0.9"
default-features = false
features = ["cookie", "query", "typed-header"]

[dependencies.tower-http]
version = "0.5"
features = ["trace", "cors"]

[dependencies.futures]
version = "0.3"
default-features = false
features = ["std"]

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
  "runtime-tokio",
  "tls-rustls",
  "macros",
  "migrate",
  "mysql",
  "json",
  "chrono",
  "time",
  "uuid",
]

[dependencies.utoipa]
version = "4.2"
features = [
  "axum_extras",
  "debug",
  "chrono",
  "uuid",
  "url",
  "preserve_order",
  "preserve_path_order",
  "non_strict_integers",
]

[dependencies.utoipa-swagger-ui]
version = "7.1.0"
features = ["axum"]

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["ansi", "env-filter"]

[dependencies.tracing-appender]
version = "0.2"

[dependencies.console-subscriber]
version = "0.2"
optional = true

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls", "json"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.serde_urlencoded]
version = "0.7"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std", "clock", "serde"]

[dependencies.time]
version = "0.3"
features = ["serde"]

[dependencies.url]
version = "2.5"
features = ["serde"]

[dependencies.uuid]
version = "1.8"
features = ["v4", "v7", "serde"]

[dependencies.semver]
version = "1"
features = ["serde"]

[dependencies.jwt]
package = "jsonwebtoken"
version = "9.3"

[dependencies.derive_more]
version = "1.0.0-beta.6"
features = ["from", "into", "debug", "display", "deref", "deref_mut"]

[dependencies.itertools]
version = "0.13"

[dependencies.crc32fast]
version = "1"

[dev-dependencies.ctor]
version = "0.2"

[dev-dependencies.rand]
version = "0.8"

[dev-dependencies.testcontainers]
version = "0.16"

[dev-dependencies.testcontainers-modules]
version = "0.4.3"
features = ["mariadb"]

[workspace]
members = ["crates/cs2kz", "crates/macros", "crates/spec-generator"]

# See https://doc.rust-lang.org/rustc/lints/listing/index.html
[workspace.lints.rust]
elided_lifetimes_in_paths = "deny"
let_underscore_drop = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "forbid"
unused_lifetimes = "warn"

# See https://doc.rust-lang.org/rustdoc/lints.html
[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

# See https://rust-lang.github.io/rust-clippy/stable/index.html
[workspace.lints.clippy]
as_conversions = "warn"
bool_comparison = "allow"
bool_to_int_with_if = "warn"
branches_sharing_code = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
clone_on_ref_ptr = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
enum_glob_use = "deny"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "warn"
future_not_send = "warn"
if_not_else = "warn"
ignored_unit_patterns = "warn"
impl_trait_in_params = "deny"
inconsistent_struct_constructor = "deny"
indexing_slicing = "deny"
inefficient_to_string = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "deny"
many_single_char_names = "deny"
map_unwrap_or = "warn"
match_on_vec_items = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
missing_const_for_fn = "warn"
missing_docs_in_private_items = "warn"
missing_safety_doc = "deny"
needless_collect = "warn"
needless_continue = "warn"
needless_for_each = "warn"
new_without_default = "allow"
redundant_closure = "allow"
redundant_else = "deny"
same_name_method = "deny"
todo = "warn"
unimplemented = "deny"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
wildcard_imports = "deny"

[workspace.dependencies.anyhow]
version = "1"

[workspace.dependencies.thiserror]
version = "1"
