[package]
name = "cs2kz-api"
version = "0.0.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
readme = "./README.md"
homepage = "https://cs2kz.org"
repository = "https://github.com/KZGlobalTeam/cs2kz-api"
license = "GPL-3.0"

[features]
production = []
console = ["tokio/tracing", "dep:console-subscriber"]

[lints]
workspace = true

[dependencies.cs2kz]
path = "./lib/cs2kz"
features = ["serde", "sqlx", "utoipa"]

[dependencies.cs2kz-api-macros]
path = "./lib/macros"

[dependencies.thiserror]
workspace = true

[dependencies.color-eyre]
workspace = true

[dependencies.clap]
version = "4.5"
features = ["derive", "env"]

[dependencies.similar]
version = "2.6"

[dependencies.dotenvy]
workspace = true

[dependencies.tokio]
version = "1.38"
features = ["macros", "rt-multi-thread", "signal", "process"]

[dependencies.futures]
version = "0.3"
default-features = false

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["ansi", "env-filter"]

[dependencies.tracing-appender]
version = "0.2"

[dependencies.tracing-journald]
version = "0.3"

[dependencies.console-subscriber]
version = "0.4"
optional = true

[dependencies.axum]
version = "0.7"
default-features = false
features = ["macros", "http1", "http2", "tokio", "json"]

[dependencies.axum-extra]
version = "0.9"
default-features = false
features = ["query", "typed-header", "cookie"]

[dependencies.http]
version = "1.0"

[dependencies.tower]
version = "0.5"
features = ["util", "make"]

[dependencies.tower-http]
version = "0.5"
features = ["trace", "catch-panic", "cors"]

[dependencies.pin-project]
version = "1"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls", "json"]

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "macros",
  "runtime-tokio-rustls",
  "mysql",
  "migrate",
  "uuid",
  "time",
  "json",
]

[dependencies.utoipa]
version = "4.2"
features = [
  "auto_into_responses",
  "axum_extras",
  "time",
  "non_strict_integers",
  "preserve_order",
  "preserve_path_order",
  "url",
  "uuid",
]

[dependencies.utoipa-swagger-ui]
version = "7.1"
features = ["axum", "vendored"]

[dependencies.utoipauto]
version = "0.1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.toml]
version = "0.8"
default-features = false
features = ["parse"]

[dependencies.serde_urlencoded]
version = "0.7"

[dependencies.jsonwebtoken]
version = "9.3"

[dependencies.time]
version = "0.3"
features = ["serde-human-readable"]

[dependencies.url]
version = "2.5"
features = ["serde"]

[dependencies.uuid]
version = "1.10"
features = ["v4", "v7", "serde"]

[dependencies.md5]
version = "0.7"

[dependencies.hex]
version = "0.4"
features = ["serde"]

[dependencies.semver]
version = "1.0"
features = ["serde"]

[dependencies.mime]
version = "0.3"

[dependencies.itertools]
version = "0.13"

[dependencies.tap]
version = "1.0"

[dependencies.sealed]
version = "0.5"

[dev-dependencies.ctor]
version = "0.2"

[dev-dependencies.fake]
version = "2.9"
features = ["derive", "time"]

[dev-dependencies.rand]
version = "0.8"

[workspace]
members = ["lib/cs2kz", "lib/macros"]

# See https://doc.rust-lang.org/rustc/lints/listing/index.html
[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
keyword_idents_2024 = "warn"
let_underscore_drop = "warn"
missing_docs = "warn"
non_ascii_idents = "deny"
redundant_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tokio_unstable)"] }
unit_bindings = "warn"
unsafe_op_in_unsafe_fn = "forbid"
unused_lifetimes = "warn"

# See https://doc.rust-lang.org/rustdoc/lints.html
[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

# See https://rust-lang.github.io/rust-clippy/stable/index.html
[workspace.lints.clippy]
bool_to_int_with_if = "warn"
branches_sharing_code = "warn"
builtin_type_shadow = "deny"
clone_on_ref_ptr = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
enum_glob_use = "deny"
filter_map_next = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "warn"
future_not_send = "warn"
if_not_else = "warn"
ignored_unit_patterns = "warn"
inconsistent_struct_constructor = "deny"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "deny"
many_single_char_names = "deny"
map_unwrap_or = "warn"
missing_assert_message = "deny"
missing_docs_in_private_items = "warn"
missing_safety_doc = "deny"
needless_collect = "warn"
needless_continue = "warn"
needless_for_each = "warn"
new_without_default = "allow"
redundant_closure = "allow"
redundant_else = "warn"
same_name_method = "warn"
todo = "warn"
unimplemented = "deny"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
upper_case_acronyms = "allow"
wildcard_imports = "deny"

[workspace.dependencies.thiserror]
version = "1.0"

[workspace.dependencies.color-eyre]
version = "0.6"

[workspace.dependencies.dotenvy]
version = "0.15"
