# Copyright (C) 2024  AlphaKeks <alphakeks@dawn.sh>
#
# This library is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this repository.  If not, see <https://www.gnu.org/licenses/>.

[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/cs2kz-api"]

[workspace.package]
version = "0.0.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2024"
homepage = "https://cs2kz.org"
repository = "https://github.com/KZGlobalTeam/cs2kz-api"

[workspace.metadata.crane]
name = "cs2kz-api"

[workspace.lints.clippy]
redundant_pattern_matching = "allow"
# `Result::map_err()` messes up caller location if the function passed to it is
# annotated with `#[track_caller]`
redundant_closure = "allow"

[workspace.dependencies.anyhow]
version = "1.0.95"

[workspace.dependencies.derive_more]
version = "2.0.0"
features = [
  "debug",
  "display",
  "error",
  "from",
  "into",
  "deref",
  "deref_mut",
  "as_ref",
]

[workspace.dependencies.time]
version = "0.3.36"
features = ["parsing", "formatting", "serde"]

[workspace.dependencies.ulid]
version = "1.1.3"
features = ["serde"]

[workspace.dependencies.semver]
version = "1.0.23"
features = ["serde"]

[workspace.dependencies.url]
version = "2.5.4"
features = ["serde"]

[workspace.dependencies.serde]
version = "1.0.215"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0.133"

[workspace.dependencies.tracing]
version = "0.1.41"

[workspace.dependencies.tracing-subscriber]
version = "0.3.19"
default-features = false
features = ["smallvec", "fmt", "ansi", "env-filter"]

[workspace.dependencies.futures-util]
version = "0.3.31"

[workspace.dependencies.bytes]
version = "1.9.0"

[workspace.dependencies.uuid]
version = "1.19.0"
features = ["v4", "v7", "serde"]

[workspace.dependencies.pin-project]
version = "1.1.7"

[workspace.dependencies.tokio]
version = "1.44.2"
features = ["macros", "rt-multi-thread", "time", "net", "process", "tracing"]

[workspace.dependencies.tokio-util]
version = "0.7.12"
features = ["rt", "time", "codec"]

[workspace.dependencies.http]
version = "1.2.0"

[workspace.dependencies.http-body]
version = "1.0.1"

[workspace.dependencies.http-body-util]
version = "0.1.2"

[workspace.dependencies.mime]
version = "0.3.17"

[workspace.dependencies.lettre]
version = "0.11.11"
default-features = false
features = ["serde"]

[workspace.dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
  "macros",
  "migrate",
  "mysql",
  "runtime-tokio",
  "tls-rustls",
  "time",
  "json",
]

[workspace.dependencies.fake]
version = "3.1.0"
features = ["derive", "semver"]

[workspace.dependencies.clap]
version = "4.5.23"
features = ["derive"]
