[package]
name = "cs2kz-api"
version = "0.0.0"
edition = "2021"

[dependencies]
color-eyre = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
utoipa = { workspace = true }

[dependencies.cs2kz]
path = "../cs2kz/"
features = ["serde", "utoipa"]

[dependencies.axum]
version = "0.7"
default-features = false
features = ["http1", "json", "query", "tokio", "macros"]

[dependencies.axum-extra]
version = "0.9"
default-features = false
features = ["typed-header"]

[dependencies.hyper]
version = "1"

[dependencies.http-body-util]
version = "0.1"

[dependencies.tower-http]
version = "0.5"
features = ["cors"]

[dependencies.jsonwebtoken]
version = "9"

[dependencies.utoipa-swagger-ui]
version = "5"
features = ["axum"]
