# Copyright (C) AlphaKeks <alphakeks@dawn.sh>
#
# This is free software. You can redistribute it and / or modify it under the terms of the
# GNU General Public License as published by the Free Software Foundation, either version 3
# of the License, or (at your option) any later version.
#
# You should have received a copy of the GNU General Public License along with this repository.
# If not, see <https://www.gnu.org/licenses/>.

[package]
name = "cs2kz"
version = "0.0.0"
edition = "2021"

[features]
serde = ["dep:serde", "dep:serde_json"]
utoipa = ["dep:utoipa", "serde"]

[dependencies]
thiserror = { version = "1" }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
utoipa = { version = "3.5", optional = true }
lazy-regex = "3"

[dev-dependencies]
color-eyre = "0.6.2"
ctor = "0.2.5"
pretty_assertions = "1.4.0"
