[package]
name = "cs2kz"
version = "0.0.0"
edition = "2021"

[features]
serde = ["dep:serde", "dep:serde_json"]
utoipa = ["dep:utoipa", "serde"]

[dependencies]
thiserror = { version = "1" }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
utoipa = { version = "4", optional = true }
lazy-regex = "3"

[dev-dependencies]
color-eyre = "0.6.2"
ctor = "0.2.5"
pretty_assertions = "1.4.0"
