[package]
name = "cs2kz-api-macros"
version = "0.0.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro"] }

[dev-dependencies]
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro", "printing", "extra-traits"] }
