[package]
name = "cs2kz-api-spec-generator"
version = "0.0.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
description = "CLI tool for generating an OpenAPI specification in JSON format."
readme = "../README.md"
homepage = "https://cs2.kz"
repository = "https://github.com/KZGlobalTeam/cs2kz-api.git"
license-file = "../LICENSE"
publish = false

[dependencies]
color-eyre = { workspace = true }

[dependencies.cs2kz-api]
path = "../cs2kz-api"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.similar]
version = "2"
