[package]
name = "cs2kz"
version = "0.0.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
readme = "./README.md"
description = "Types for building around CS2KZ"
homepage = "https://cs2.kz"
repository = "https://github.com/KZGlobalTeam/cs2kz-api"
license-file = "./LICENSE"
publish = false # TODO

[dependencies.thiserror]
version = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.sqlx]
version = "0.7.3"
default-features = false
optional = true

[dependencies.utoipa]
version = "4.2.0"
default-features = false
optional = true
