# Copyright (C) 2024  AlphaKeks <alphakeks@dawn.sh>
#
# This library is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this repository.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "cs2kz"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license-file = "../LICENSE.md"
publish = false

[features]
fake = ["dep:fake", "steam-id/fake"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
derive_more.workspace = true
time.workspace = true
ulid.workspace = true
semver.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
pin-project.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
lettre.workspace = true
pyo3.workspace = true

[dependencies.steam-id]
path = "../steam-id"
features = ["serde"]

[dependencies.a2s]
version = "0.6.1"
features = ["async"]

[dependencies.tokio-stream]
version = "0.1.17"
features = ["sync"]

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
  "macros",
  "migrate",
  "mysql",
  "runtime-tokio",
  "tls-rustls",
  "time",
  "json",
]

[dependencies.md-5]
version = "0.10.6"

[dependencies.fake]
workspace = true
optional = true
