[package]
name = "cs2kz-api-macros"
version = "0.0.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
readme = "../../README.md"
homepage = "https://cs2kz.org"
repository = "https://github.com/KZGlobalTeam/cs2kz-api"
license-file = "../../LICENSE"
publish = false

[lib]
proc-macro = true

[dependencies.proc-macro-error]
version = "1.0"

[dependencies.syn]
version = "2.0"
default-features = false
features = ["proc-macro", "parsing"]

[dependencies.quote]
version = "1.0"
default-features = false
