[package]
name = "spec-generator"
version = "0.0.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
readme = "./README.md"
homepage = "https://cs2.kz"
repository = "https://github.com/KZGlobalTeam/cs2kz-api"
license-file = "./LICENSE"
publish = false

[dependencies.cs2kz-api]
path = "../../"

[dependencies.eyre]
workspace = true

[dependencies.clap]
workspace = true

[dependencies.similar]
version = "2.4"
