[package]
name = "spec-generator"
version = "0.0.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
readme = "./README.md"
homepage = "https://cs2kz.org"
repository = "https://github.com/KZGlobalTeam/cs2kz-api"
license-file = "./LICENSE"
publish = false

[dependencies.cs2kz-api]
path = "../../"

[dependencies.anyhow]
workspace = true

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.similar]
version = "2.6"
