# Copyright (C) 2024  AlphaKeks <alphakeks@dawn.sh>
#
# This library is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this repository.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "steam-openid"
version = "0.0.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2024"
homepage = "https://cs2kz.org"
repository = "https://github.com/KZGlobalTeam/cs2kz-api"
license-file = "../LICENSE.md"
publish = false

[features]

[lints]
workspace = true

[dependencies]
derive_more.workspace = true
url.workspace = true
serde.workspace = true
tracing.workspace = true
bytes.workspace = true
http.workspace = true
http-body.workspace = true
http-body-util.workspace = true
mime.workspace = true

[dependencies.steam-id]
path = "../steam-id"

[dependencies.serde_urlencoded]
version = "0.7.1"

[dependencies.tower-service]
version = "0.3.3"

[dev-dependencies]

[build-dependencies]
