# CS2KZ "standard library"
# Copyright (C) 2024  AlphaKeks <alphakeks@dawn>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see https://www.gnu.org/licenses.

[package]
name = "cs2kz"
version = "0.0.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
readme = "../../README.md"
homepage = "https://cs2kz.org"
repository = "https://github.com/KZGlobalTeam/cs2kz-api"
license = "GPL-3.0"

[features]
sqlx-steamid-as-u32 = []

[lints]
workspace = true

[dependencies.thiserror]
version = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.sqlx]
version = "0.8"
default-features = false
optional = true

[dependencies.utoipa]
version = "4.2"
features = ["non_strict_integers"]
optional = true

[dev-dependencies.serde_json]
version = "1"
